# PROI_projekt

./: CMakeLists.txt  README.md  main  main.cpp
headerFiles/: conditions.hpp
